# LarkSnap

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml  config.yaml
docs/: feishu-setup.md
scripts/: install_service.bat  install_service.sh  larksnap.service  uninstall_service.bat  uninstall_service.sh
src/larksnap/: main.py
src/larksnap/adapters/: base.py  registry.py
src/larksnap/adapters/camera/: interface.py  opencv_adapter.py
src/larksnap/adapters/detector/: _seg_ort.py  _yolo_seg_ort.py  interface.py  mock_adapter.py  seg_adapter.py  yolo_seg_adapter.py
src/larksnap/adapters/notifier/: command_registry.py  feishu_adapter.py  feishu_ws_client.py  interface.py
src/larksnap/adapters/recorder/: video_recorder.py
src/larksnap/config/: loader.py  models.py  service.py  state_persistence.py
src/larksnap/gateway/: component_state.py  controller.py  event_bus.py  frame_queue.py  notification_service.py  pipeline.py  snapshot_service.py
src/larksnap/service/: __init__.py  linux.py  platform_utils.py  runner.py  tray.py  windows.py  windows_service.py
src/larksnap/ui/: main_window.py
src/larksnap/utils/: camera_error_translator.py  exceptions.py  logger.py  worker_pool.py
tests/: conftest.py  test_adapters.py  test_command_registry.py  test_component_state.py  test_config.py  test_config_service.py  test_controller_commands.py  test_controller_config_command.py  test_controller_lifecycle.py  test_feishu_command_parser.py  test_feishu_content_encoding.py  test_gateway.py  test_main_cli.py  test_opencv_log_suppression.py  test_service.py  test_snapshot_service.py  test_state_persistence.py  test_target_class_filter.py  test_threading_fixes.py  test_threading_stress.py
