[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "larksnap"
version = "0.1.0"
description = "Gateway-controlled object detection system with Feishu notification"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "onnxruntime>=1.17.0",
    "numpy<2",
    "lark-oapi>=1.4.0",
    "pyzmq>=26.0.0",
    "PySide6>=6.7.0",
]

[project.optional-dependencies]
cuda = [
    "onnxruntime-gpu>=1.17.0",
    "nvidia-cudnn-cu11==8.9.5.29; sys_platform == 'win32'",
    "nvidia-cublas-cu11>=11.11,<12; sys_platform == 'win32'",
    "nvidia-cuda-nvrtc-cu11>=11.8,<12; sys_platform == 'win32'",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
larksnap = "larksnap.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]
