[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "larksnap"
version = "0.2.0"
description = "Cross-platform gateway-controlled object detection system with Feishu notification"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "LarkSnap Team" },
]
keywords = ["detection", "feishu", "lark", "object-detection", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: System :: Monitoring",
]

# Core dependencies shared by every launch mode.
# UI / tray / service launch modes are opt-in via the
# [project.optional-dependencies] table – this keeps headless service
# installs free of Qt and lets users pick exactly one inference backend.
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "lark-oapi>=1.4.0",
    "pyzmq>=26.0.0",
    "numpy<2",
    "opencv-python>=4.8.0",
]

[project.optional-dependencies]
# --- Inference backend (pick exactly one) ---------------------------------
# CPU is the default fallback. Works on any platform.
cpu = [
    "onnxruntime>=1.17.0",
]
# NVIDIA CUDA. Use the linux extras on Linux, the windows extras on Windows.
gpu-cuda = [
    "onnxruntime-gpu>=1.17.0",
]
gpu-cuda-linux = [
    "onnxruntime-gpu>=1.17.0",
    "nvidia-cublas-cu12>=12.4.5.8",
    "nvidia-cuda-cupti-cu12>=12.4.127",
    "nvidia-cuda-nvrtc-cu12>=12.4.127",
    "nvidia-cuda-runtime-cu12>=12.4.127",
    "nvidia-cudnn-cu12>=9.0.0",
    "nvidia-cufft-cu12>=11.2.1.3",
    "nvidia-curand-cu12>=10.3.5.147",
    "nvidia-cusolver-cu12>=11.6.1.9",
    "nvidia-cusparse-cu12>=12.3.1.170",
    "nvidia-nccl-cu12>=2.21.5",
    "nvidia-nvjitlink-cu12>=12.4.127",
    "nvidia-nvtx-cu12>=12.4.127",
]
gpu-cuda-windows = [
    "onnxruntime-gpu>=1.17.0",
    "nvidia-cudnn-cu11==8.9.5.29",
    "nvidia-cublas-cu11>=11.11,<12",
    "nvidia-cuda-nvrtc-cu11>=11.8,<12",
]

# --- UI launch modes ----------------------------------------------------
# `qt` pulls in the PySide6 GUI stack. Not installed by default so a
# headless service install (`uv sync --extra service-windows`) ships
# without any Qt runtime / wheels.
qt = [
    "PySide6>=6.7.0",
]
tray = [
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

# --- Service integration ------------------------------------------------
# Windows service support via pywin32.
service-windows = [
    "pywin32>=306; sys_platform == 'win32'",
]
# Linux service uses only stdlib (systemd notify protocol + signal handling).
# No extra runtime dependency, but kept here so `--extra service-linux`
# is a valid selection that pulls documentation/typing helpers.
service-linux = [
    "sdnotify>=0.3.2; sys_platform == 'linux'",
]
# Cross-platform umbrella: pulls the right per-platform service extra.
# The sys_platform markers inside the per-platform extras guarantee
# only one of them actually resolves on a given OS, so this is a
# safe single-token selector for "I want to run `larksnap service`".
service = [
    "larksnap[service-windows,service-linux]",
]

# --- Developer / test extras --------------------------------------------
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
]

# --- Convenience bundles -----------------------------------------------
# "Everything" set for a typical desktop install on the current platform.
# The `service` umbrella extra auto-picks `service-windows` or
# `service-linux` via the sys_platform markers, so a single bundle
# works on either OS.
# Users on a particular OS can also do: uv sync --extra gpu-cuda-linux
all = [
    "larksnap[cpu,qt,tray,service]",
]
all-cuda = [
    "larksnap[gpu-cuda,qt,tray,service]",
]
all-cuda-linux = [
    "larksnap[gpu-cuda-linux,qt,tray,service]",
]
all-cuda-windows = [
    "larksnap[gpu-cuda-windows,qt,tray,service]",
]

[project.scripts]
larksnap = "larksnap.main:main"

[project.urls]
Homepage = "https://github.com/example/larksnap"
Documentation = "https://github.com/example/larksnap/blob/main/docs/platforms.md"
Issues = "https://github.com/example/larksnap/issues"

# ---------------------------------------------------------------------------
# uv tool configuration
# ---------------------------------------------------------------------------
[tool.uv]
managed = true
package = true

# Default dev install: CPU inference only (core + dev extras).
# Add the launch mode(s) you actually need, e.g.:
#   uv sync --extra qt              # GUI development
#   uv sync --extra qt,tray         # GUI + tray
#   uv sync --extra service         # headless service install (no Qt)
#   uv sync --extra all             # everything (CPU backend)
# Override the inference backend with --extra gpu-cuda-{linux,windows}.

# ---------------------------------------------------------------------------
# Hatchling build configuration
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/larksnap"]

[tool.hatch.build.targets.wheel.shared-data]
"config/config.example.yaml" = "larksnap/config/config.example.yaml"
"models/seg-model.onnx" = "larksnap/models/seg-model.onnx"

[tool.hatch.build.targets.sdist]
include = [
    "src/larksnap",
    "config/config.example.yaml",
    "docs/*.md",
    "scripts/*.sh",
    "scripts/*.bat",
    "scripts/*.service",
    "README.md",
    "LICENSE",
]

# ---------------------------------------------------------------------------
# Lint / type-check / test configuration (unchanged)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "stress: high-concurrency stress tests that exercise the threading fixes",
    "platform_linux: tests that exercise Linux-specific service code",
    "platform_windows: tests that exercise Windows-specific service code",
]
